Learning Objective Module and Assigment F Files

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/client/style/theme/public/gwt/unibas/unibas.css
@@ -1552,6 +1552,11 @@ td.datePickerMonth {
 	width: 37px;
 }
 
+.skillTable{
+	overflow: hidden;
+	white-space: nowrap;
+}
+
   /****************************************/
  /******** BUTTON BORDER *****************/
 /****************************************/
